package compliant.payroll;

public interface ICalculate{
    double calculateSalary();
    double calculateTax(double income);
}


