' Generated by UML Generator
' Encoded: rLPTRzCm57tFh_1Z2cjLMf2cI4ohwAPLMaL5-uOGkdLkEmidhXm7BOprjnCdRHf_54O5JBpPFiVtdllbv39J85MUy23xmj8DI4W8vP1b8wKaM-OA9rIaS_ODIJ-uOp4IoYJb60GLYyoWa8BpAQImHaaU0a9UFfGs5QEF906MXY3NMKJcfRLq_V5J9o9V1Ok3nxs16uJu_MgCfMkLOAeg4rrCDbmKUZy6XH6v5HIuNcemosKA2UwDwYDxp-A8i5JffOBxTy1fpa496P55UwlnhfPigmYhjBJydX7BwnanTpkF7MrjZPNigoQ8i6E6e1dpsfw66jtLEN2GnMYbK9PQmqIaweuNzMb4Of4lENRsYqCUQy8Xj3gFIyYmHgvd-plaBNdJx_TDUDI6XpkuG93PDEUARJX3QPdmC0mhWug1zqh2ZHYtWFFQUfLukXEyan7MXSSoiNP93Z7_zDfrplbCYXLccP1Fl3CgkPILo2ykwdgmb0fTzwE5C0GyJpSR4iAZtlz2J_zMxnwRWoQLHdHrAfktvSDeSVNvLQkh-ht1q6KC3CRGmnWQZDScutOodImCDuFptN1Od84rNfuMrodH0yEBoP4c-Xy6egcEItgURdTr_DEM_rFFUEaLvGeeaia-IAmIkZsj9ROdjCJsr3To-zGtqldSl-XshRewNx9Ux_j5Aoa-meMJ2Z_BYDnFSGCDp2VTLMo-KxPS6_LeTIccK1VtgFJCeokrrLjU9HPkoh10ZuPBJEFoP_87
' URL: http://www.plantuml.com/plantuml/uml/rLPTRzCm57tFh_1Z2cjLMf2cI4ohwAPLMaL5-uOGkdLkEmidhXm7BOprjnCdRHf_54O5JBpPFiVtdllbv39J85MUy23xmj8DI4W8vP1b8wKaM-OA9rIaS_ODIJ-uOp4IoYJb60GLYyoWa8BpAQImHaaU0a9UFfGs5QEF906MXY3NMKJcfRLq_V5J9o9V1Ok3nxs16uJu_MgCfMkLOAeg4rrCDbmKUZy6XH6v5HIuNcemosKA2UwDwYDxp-A8i5JffOBxTy1fpa496P55UwlnhfPigmYhjBJydX7BwnanTpkF7MrjZPNigoQ8i6E6e1dpsfw66jtLEN2GnMYbK9PQmqIaweuNzMb4Of4lENRsYqCUQy8Xj3gFIyYmHgvd-plaBNdJx_TDUDI6XpkuG93PDEUARJX3QPdmC0mhWug1zqh2ZHYtWFFQUfLukXEyan7MXSSoiNP93Z7_zDfrplbCYXLccP1Fl3CgkPILo2ykwdgmb0fTzwE5C0GyJpSR4iAZtlz2J_zMxnwRWoQLHdHrAfktvSDeSVNvLQkh-ht1q6KC3CRGmnWQZDScutOodImCDuFptN1Od84rNfuMrodH0yEBoP4c-Xy6egcEItgURdTr_DEM_rFFUEaLvGeeaia-IAmIkZsj9ROdjCJsr3To-zGtqldSl-XshRewNx9Ux_j5Aoa-meMJ2Z_BYDnFSGCDp2VTLMo-KxPS6_LeTIccK1VtgFJCeokrrLjU9HPkoh10ZuPBJEFoP_87
' Generated on: 2026-03-28T12:03:23.463400

@startuml
skinparam classAttributeIconSize 0
hide circle

class PayrollManager {
  +{static} main(args: String[]): void
}

class HeadOfDepartment {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +HeadOfDepartment(start: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
}

class SalaryCalculator {
  -baseSalaryFP: double = 5000
  -baseSalaryAP: double = 3000
  -yearsMultiplierFP: double = 50
  -yearsMultiplierAP: double = 20
  -extraHoD: double = 800
  --
  +calculateSalary(employee: HeadOfDepartment): double
  +calculateSalary(employee: FullProfessor): double
  +calculateSalary(employee: AssociateProfessor): double
  +calculateTax(income: double): double
}

class FullProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +FullProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSalaryAfterTax(monthlySalary: double): double
  +getSurname(): String
}

class TaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
  +calculateSalary(employee: HeadOfDepartment): double
  +calculateSalary(employee: FullProfessor): double
  +calculateSalary(employee: AssociateProfessor): double
}

class AssociateProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +AssociateProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
}

interface ICalculate {
  ~calculateSalary(employee: HeadOfDepartment): double
  ~calculateSalary(employee: FullProfessor): double
  ~calculateSalary(employee: AssociateProfessor): double
  ~calculateTax(income: double): double
}

HeadOfDepartment *-- TaxCalculator
SalaryCalculator ..|> ICalculate
SalaryCalculator ..> HeadOfDepartment
SalaryCalculator ..> FullProfessor
SalaryCalculator ..> AssociateProfessor
FullProfessor *-- TaxCalculator
TaxCalculator ..|> ICalculate
TaxCalculator ..> HeadOfDepartment
TaxCalculator ..> FullProfessor
TaxCalculator ..> AssociateProfessor
AssociateProfessor *-- TaxCalculator
ICalculate ..> HeadOfDepartment
ICalculate ..> FullProfessor
ICalculate ..> AssociateProfessor
@enduml